--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "aleksandrpnshkn",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0"
