--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0"
