--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "aleksandrpnshkn",
   "license": "MIT",
   "dependencies": {
+    "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "normalize.css": "^8.0.1",
