--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0"
