--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
-    "pug-loader": "^2.4.0"
+    "pug-loader": "^2.4.0",
+    "slick-carousel": "^1.8.1"
   }
 }
