--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "jquery.maskedinput": "^1.4.1",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
