Restructure pages. Add homepage. Edit main layout

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "air-datepicker": "^2.2.3",
+    "glob": "^7.1.4",
     "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
