--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "pug": "^2.0.4",
+    "glob": "^7.1.4",
+    "cross-env": "^5.2.0",
+    "pug-loader": "^2.4.0"
   },
   "browserslist": [
     "> 1%",
@@ -37,16 +41,12 @@
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "chartist": "^0.11.3",
-    "cross-env": "^5.2.0",
-    "glob": "^7.1.4",
     "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jquery.maskedinput": "^1.4.1",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
     "slick-carousel": "^1.8.1"
   }
 }
